# bp-fileaccess

./: .gitconfig  .gitignore  .gitmodules  BUILDING  CMakeLists.txt  COPYING  build.properties  build.xml
src/: BuildConfigs.cmake  CMakeLists.txt  FileServer.cpp  FileServer.h  ResourceLimit.h  base64.h  build.xml  littleuuid.cpp  littleuuid.h  littleuuid_Darwin.cpp  littleuuid_Windows.cpp  manifest.json  service.cpp  service.h
src/util/: fileutil.cpp  fileutil.hh
test/: README  bp_service_runner.rb  build.xml  runtests.rb  util.rb
test/cases_chunk/: case2.json
test/cases_geturl/: case1.json  case2.json
test/cases_slice/: case1.json  case2.json
test/test_files/: services.txt
unittest/: unittest.rb
unittest/cases_chunk/: case1.json
unittest/cases_read/: case1.json  case2.json
